- Removed the redundant DOMS client implementation from the project and added the domsclient library version 0.0.2. - Changed the port number for the DOMS server from 7880 to 7980. - The ingester now adds the program name as the object label on DOMS program objects.